# chrome-applicative

./: .gitignore  Cargo.toml
src/: lib.rs  util.rs
src/browser/: fetcher.rs  mod.rs  process.rs
src/browser/tab/: keys.rs  mod.rs
src/browser/tab/element/: mod.rs
src/browser/transport/: mod.rs  waiting_call_registry.rs  web_socket_connection.rs
src/protocol/: dom.rs  mod.rs  network.rs  page.rs
tests/: connect_to_url.rs  coverage.rs  events_listeners.rs  expose_function.rs  extension.rs  file_chooser.rs  local_storage.rs  logs.rs  simple.rs
