[package]
name = "chrome-applicative"
version = "1.0.1"
authors = ["dhkim <dhkim93@monitorapp.com>"]
description = "Control Chrome programatically"
readme = "README.md"

edition = "2018"

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
derive_builder = "0.10.2"
log = "0.4.14"
rand = "0.8.4"
regex = "1.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1.0.29"
url = "2.2.2"
websocket = { version = "0.26.2", default_features = false, features = ["sync"] }
which = "4.2.2"
crossbeam-channel = "0.5.1"

ureq = { version = "2.2.0", optional = true }
walkdir = { version = "2.3.2", optional = true }
directories = { version = "3.0.2", optional = true }
zip = { version = "0.5.13", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.9"

[dev-dependencies]
chrono = { version = "0.4.19", default-features = false }
env_logger = "0.9.0"
png = "0.17.1"
tiny_http = "0.8.2"
jpeg-decoder = { version = "0.1.22", default-features = false }
filepath = "0.1.1"

[lib]
name = "chrome_applicative"
path = "src/lib.rs"

[features]
default = []
fetch = [ "ureq", "directories", "zip", "walkdir" ]
nightly = []
